--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -2,6 +2,7 @@ body {
   margin: 0;
   font-family: 'Lato', sans-serif;
   font-size: 62.5%;
+  background: #CCCCCC !important;
 }
 
 .gitButton {
@@ -25,10 +26,17 @@ body {
   justify-content: center;
 }
 
-.form {
+.formLogin {
   justify-content: center; 
   align-items: center;
   align-content: space-around;
+  margin-top: 4em;
+}
+.formSignup {
+  justify-content: center; 
+  align-items: center;
+  flex-direction: column;
+  margin-top: 4em;
 }
 
 a#github-button {
