partial completion of match details so Quoc can connect chat

--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -46,3 +46,9 @@ a#github-button {
   margin-left: 0.1em;
   margin-top: 0.2em;
 }
+
+.chatbox{
+  border: 1px solid black;
+  height: 8em;
+  width: 100%;
+}
