--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -27,13 +27,13 @@ body {
 }
 
 .formLogin {
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
   align-content: space-around;
   margin-top: 4em;
 }
 .formSignup {
-  justify-content: center; 
+  justify-content: center;
   align-items: center;
   flex-direction: column;
   margin-top: 4em;
@@ -51,4 +51,35 @@ a#github-button {
   border: 1px solid black;
   height: 8em;
   width: 100%;
+}
+
+
+#chat-main {
+  border: solid 1px rgb(0,0,0, .2);
+  border-radius: 5px;
+  padding: 20 15;
+  background-color: white;
+  display:flex;
+}
+
+.chat-msg-you {
+  text-align: right;
+  width: fit-content;
+  color: white;
+  border: solid 1px #00BFFF;
+  background-color: #00BFFF;
+  border-radius: 10px;
+  padding: 5;
+}
+.chat-msg-me {
+  text-align: right;
+  width: fit-content;
+  border: solid 1px #D3D3D3;
+  background-color: #D3D3D3;
+  border-radius: 10px;
+  padding: 5;
+}
+#chat-row {
+  justify-content: center;
+  margin-top: 30;
 }
