--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -50,6 +50,30 @@ body {
   align-items: center;
   align-content: space-around;
   margin-top: 4em;
+      border: 1px solid rgb(0,0,0, .2);
+    min-width: 300px;
+    padding: 30;
+    background-color: white;
+}
+
+#login-button {
+  margin-top: 30px;
+  margin-bottom: 20px;
+  width:100%;
+}
+
+#login-github {
+  margin-bottom: 20px;
+  width:100%;
+}
+
+#create-account {
+  margin-bottom: 20px;
+  width:100%;
+}
+
+#login-form {
+  margin-top:40;
 }
 .formSignup {
   justify-content: center;
