--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -4,6 +4,9 @@ body {
   font-size: 62.5%;
   background: #CCCCCC !important;
 }
+div.dropdown{
+  text-align: right;
+}
 
 .gitButton {
   border: 5px solid black;
