--- a/client/assets/styles.css
+++ b/client/assets/styles.css
@@ -2,8 +2,26 @@ body {
   margin: 0;
   font-family: 'Lato', sans-serif;
   font-size: 62.5%;
-  background: #CCCCCC !important;
 }
+
+.vis-banner {
+  width: 250px;
+}
+
+.corner-pic {
+  height: 45px;
+}
+#header-dropdown {
+  color: black;
+  background-color: white;
+  border-color: white;
+}
+#header-dropdown:hover {
+  color: black;
+  background-color: white;
+  border-color: white;
+}
+
 div.dropdown{
   text-align: right;
 }
@@ -54,15 +72,18 @@ div.dropdown{
   100% { transform: rotate(360deg); }
 }
 
+#app {
+  height: 80vh;
+  display:flex;
+}
+
 .formLogin {
-  justify-content: center;
-  align-items: center;
-  align-content: space-around;
-  margin-top: 4em;
-      border: 1px solid rgb(0,0,0, .2);
-    min-width: 300px;
-    padding: 30;
-    background-color: white;
+  border: 1px solid rgb(0,0,0, .2);
+  min-width: 300px;
+  padding: 30;
+  background-color: white;
+  width: 300;
+  margin: auto;
 }
 
 #login-button {
